After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 664494 - GtkNotebook misc allocation fixes
GtkNotebook misc allocation fixes
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: .General
unspecified
Other All
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2011-11-21 19:12 UTC by Cosimo Cecchi
Modified: 2011-11-21 19:20 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
notebook: properly subtract the initial_gap width from the tab space (1011 bytes, patch)
2011-11-21 19:12 UTC, Cosimo Cecchi
committed Details | Review
notebook: use the current page allocation when computing the redraw area (2.23 KB, patch)
2011-11-21 19:12 UTC, Cosimo Cecchi
committed Details | Review

Description Cosimo Cecchi 2011-11-21 19:12:13 UTC
See attached patches.
Comment 1 Cosimo Cecchi 2011-11-21 19:12:15 UTC
Created attachment 201851 [details] [review]
notebook: properly subtract the initial_gap width from the tab space

Instead of modifying the allocation.
Comment 2 Cosimo Cecchi 2011-11-21 19:12:23 UTC
Created attachment 201852 [details] [review]
notebook: use the current page allocation when computing the redraw area

Instead of taking the first page and trying to adjust the rect with
random padding values, take the current page, as it's always guaranteed
to be at least as tall as inactive tabs.
This fixes some annoying 1px drawing artifacts while switching tabs when
the theme disables notebook padding.
Comment 3 Cosimo Cecchi 2011-11-21 19:20:08 UTC
Attachment 201851 [details] pushed as f01162c - notebook: properly subtract the initial_gap width from the tab space
Attachment 201852 [details] pushed as 79bbce5 - notebook: use the current page allocation when computing the redraw area

Pushed to master