notebook: properly subtract the initial_gap width from the tab space

Instead of modifying the allocation.

https://bugzilla.gnome.org/show_bug.cgi?id=664494